fix(orderSummary): Wrap long text coupon code

--- a/public/scss/components/Footer.module.scss
+++ b/public/scss/components/Footer.module.scss
@@ -47,6 +47,10 @@
         margin-right: 18px;
       }
     }
+
+    img {
+      max-width: 100%;
+    }
   }
 
   &_socialContainer
